--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -64,6 +64,7 @@
     <Compile Include="FeatureAssembly.cs" />
     <Compile Include="FeatureInstaller.cs" />
     <Compile Include="Features.cs" />
+    <Compile Include="HandlerInstaller.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResolvingInstaller.cs" />
