--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -59,9 +59,9 @@
     <Compile Include="Callback\Handler.Semantics.cs" />
     <Compile Include="Callback\Handler.Traverse.cs" />
     <Compile Include="Callback\HandlerDecorator.cs" />
+    <Compile Include="Callback\HandlerAdapter.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
-    <Compile Include="ISurrogate.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="IDecorator.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
@@ -98,7 +98,7 @@
     <Compile Include="Callback\Policy\TargetArgument.cs" />
     <Compile Include="Callback\Provider.cs" />
     <Compile Include="Callback\ProvidesAttribute.cs" />
-    <Compile Include="Callback\ResolveMethod.cs" />
+    <Compile Include="Callback\Resolve.cs" />
     <Compile Include="Callback\Handler.Bounds.cs" />
     <Compile Include="Callback\VarianceOptions.cs" />
     <Compile Include="Concurrency\Promise.Task.cs" />
