--- a/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
+++ b/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ContextualLifestyleManagerTests.cs" />
     <Compile Include="FeaturesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResolveMethodTests.cs" />
     <Compile Include="WindsorHandlerTests.cs" />
   </ItemGroup>
   <ItemGroup>
