Added ContainerAttribute argument resolver

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Callback\Batch.cs" />
+    <Compile Include="Callback\ContainerAttribute.cs" />
     <Compile Include="Callback\Handler.Batch.cs" />
     <Compile Include="Callback\Handler.Command.cs" />
     <Compile Include="Callback\Command.cs" />
