Added optional argument support

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Callback\HandlerAdapter.cs" />
     <Compile Include="Callback\HandlerFilter.cs" />
     <Compile Include="Callback\KeyAttribute.cs" />
+    <Compile Include="Callback\OptionalAttribute.cs" />
     <Compile Include="Callback\Policy\Argument.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
     <Compile Include="Callback\Policy\Keys.cs" />
