--- a/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
+++ b/Test/Miruken.Castle.Tests/Miruken.Castle.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ConfigurationFactoryInstallerTests.cs" />
     <Compile Include="ContextualLifestyleManagerTests.cs" />
     <Compile Include="FeaturesTests.cs" />
+    <Compile Include="HandlerInstallerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResolveMethodTests.cs" />
     <Compile Include="WindsorHandlerTests.cs" />
