Added support for Open Generic Handlers

--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -68,8 +68,10 @@
     <Compile Include="Callback\OptionalAttribute.cs" />
     <Compile Include="Callback\Policy\Argument.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
+    <Compile Include="Callback\Policy\GenericMapping.cs" />
     <Compile Include="Callback\ResolvingAttribute.cs" />
     <Compile Include="Callback\StringKey.cs" />
+    <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="IDecorator.cs" />
     <Compile Include="Callback\Policy\ArgumentRule.cs" />
