--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -56,14 +56,14 @@
   <ItemGroup>
     <Compile Include="ComposerSubDependencyResolver.cs" />
     <Compile Include="CompositeHandlerExtensions.cs" />
-    <Compile Include="ConfigurationFactoryInstaller.cs" />
+    <Compile Include="ConfigurationFeature.cs" />
     <Compile Include="ContextualLifestyleManager.cs" />
     <Compile Include="ContextualScopeAccessor.cs" />
     <Compile Include="ContravariantFilter.cs" />
     <Compile Include="DependencyResolution.cs" />
     <Compile Include="FeatureInstaller.cs" />
     <Compile Include="FeaturesInstaller.cs" />
-    <Compile Include="HandlerInstaller.cs" />
+    <Compile Include="HandlerFeature.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindsorHandler.cs" />
