--- a/Test/Miruken.Validate.Castle.Tests/Miruken.Validate.Castle.Tests.csproj
+++ b/Test/Miruken.Validate.Castle.Tests/Miruken.Validate.Castle.Tests.csproj
@@ -67,7 +67,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValidationInstallerTests.cs" />
+    <Compile Include="ValidationFeatureTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Source\Miruken.Castle\Miruken.Castle.csproj">
