--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -47,8 +47,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Callback\Batch.cs" />
     <Compile Include="Callback\Bundle.cs" />
     <Compile Include="Callback\ContainerAttribute.cs" />
+    <Compile Include="Callback\Handler.Batch.cs" />
     <Compile Include="Callback\Handler.Bundle.cs" />
     <Compile Include="Callback\Handler.Command.cs" />
     <Compile Include="Callback\Command.cs" />
