--- a/Source/Miruken/Miruken.nuspec
+++ b/Source/Miruken/Miruken.nuspec
@@ -12,6 +12,6 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Core Miruken</description>
     <copyright>Copyright 2016</copyright>
-    <tags>Miruken miruken</tags>
+    <tags>Miruken</tags>
   </metadata>
 </package>
