--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -13,7 +13,7 @@
     <description>Miruken Validate Castle</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>Miruken miruken Validate validate Castle castle</tags>
+    <tags>Miruken Validate Castle</tags>
     <dependencies>
       <dependency id="Castle.Core" version="[3.3.3]"/>
       <dependency id="Castle.Windsor" version="[3.3.0]"/>     
