Refined Errors feature

--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Container\TestContainer.cs" />
     <Compile Include="Context\ContextTests.cs" />
     <Compile Include="Context\ContextualTests.cs" />
+    <Compile Include="Errors\ErrorsHandlerTests.cs" />
     <Compile Include="Graph\TraversalTests.cs" />
     <Compile Include="Graph\TraversingTests.cs" />
     <Compile Include="Graph\TreeNode.cs" />
