--- a/Source/Miruken.Castle/Miruken.Castle.nuspec
+++ b/Source/Miruken.Castle/Miruken.Castle.nuspec
@@ -16,7 +16,7 @@
     <dependencies>
       <dependency id="Castle.Core" version="[3.3.3]"/>
       <dependency id="Castle.Windsor" version="[3.3.0]"/>
-      <dependency id="Miruken" version="(1.0,)"/>
+      <dependency id="Miruken" version="1.0"/>
     </dependencies>
   </metadata>
 </package>
