--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -17,10 +17,10 @@
     <dependencies>
       <dependency id="Castle.Core" version="[3.3.3]"/>
       <dependency id="Castle.Windsor" version="[3.3.0]"/>     
-      <dependency id="Miruken" version="(1.0,)"/>
-      <dependency id="Miruken.Castle" version="(1.0,)"/>
-      <dependency id="Miruken.Validate" version="(1.0,)"/>
-      <dependency id="FluentValidation" version="(6.4,)"/>
+      <dependency id="Miruken" version="1.0"/>
+      <dependency id="Miruken.Castle" version="1.0"/>
+      <dependency id="Miruken.Validate" version="1.0"/>
+      <dependency id="FluentValidation" version="6.4"/>
     </dependencies>
   </metadata>
 </package>
