--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -58,7 +58,7 @@
     <Compile Include="Callback\HandlerTests.Batch.cs" />
     <Compile Include="Callback\HandlerTests.Bundle.cs" />
     <Compile Include="Callback\HandlerTests.Command.cs" />
-    <Compile Include="Callback\ResolveCallbackTests.cs" />
+    <Compile Include="Callback\ResolvingTests.cs" />
     <Compile Include="Callback\HandleMethodTests.cs" />
     <Compile Include="Callback\HandlerTests.cs" />
     <Compile Include="Callback\StringKeyTests.cs" />
