--- a/Source/Miruken/Miruken.nuspec
+++ b/Source/Miruken/Miruken.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Core Miruken</description>
+    <description>Miruken handles your application through a uniform message handling metaphor</description>
     <copyright>Copyright 2016</copyright>
     <tags>Miruken</tags>
   </metadata>
