--- a/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
+++ b/Source/Miruken.Validate.Castle/Miruken.Validate.Castle.nuspec
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Miruken Validate Castle</description>
+    <description>Miruken validation with Castle Windsor</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2016</copyright>
     <tags>Miruken Validate Castle</tags>
