--- a/Source/Miruken.Validate/Miruken.Validate.nuspec
+++ b/Source/Miruken.Validate/Miruken.Validate.nuspec
@@ -13,7 +13,7 @@
     <description>Miruken Validate</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>Miruken Validate</tags>
+    <tags>Miruken integration providing extensible validation including DataAnnotations and FluentValidation</tags>
     <dependencies>
       <dependency id="Miruken" version="1.0"/>
       <dependency id="FluentValidation" version="6.4"/>
