--- a/Source/Miruken.Validate/Miruken.Validate.nuspec
+++ b/Source/Miruken.Validate/Miruken.Validate.nuspec
@@ -10,10 +10,10 @@
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Miruken Validate</description>
+    <description>Miruken integration providing extensible validation including DataAnnotations and FluentValidation</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2016</copyright>
-    <tags>Miruken integration providing extensible validation including DataAnnotations and FluentValidation</tags>
+    <tags>Miruken Validate DataAnnotations FluentValidation</tags>
     <dependencies>
       <dependency id="Miruken" version="1.0"/>
       <dependency id="FluentValidation" version="6.4"/>
