--- a/Source/Miruken.Castle/Miruken.Castle.csproj
+++ b/Source/Miruken.Castle/Miruken.Castle.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ComposerSubDependencyResolver.cs" />
     <Compile Include="CompositeHandlerExtensions.cs" />
     <Compile Include="ConfigurationFeature.cs" />
+    <Compile Include="ConstrainedFilterSelector.cs" />
     <Compile Include="ContextualLifestyleManager.cs" />
     <Compile Include="ContextualScopeAccessor.cs" />
     <Compile Include="ContravariantFilter.cs" />
