--- a/Source/Miruken/Miruken.nuspec
+++ b/Source/Miruken/Miruken.nuspec
@@ -6,7 +6,7 @@
     <title>Miruken</title>
     <authors>cneuwirt,provenstyle</authors>
     <owners>cneuwirt,provenstyle</owners>
-    <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE.txt</licenseUrl>
+    <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
