--- a/Source/Miruken.Map/Miruken.Map.csproj
+++ b/Source/Miruken.Map/Miruken.Map.csproj
@@ -44,9 +44,13 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AnyFormatAttribute.cs" />
+    <Compile Include="FormatAttribute.cs" />
+    <Compile Include="IFormatMatching.cs" />
     <Compile Include="IMapping.cs" />
     <Compile Include="MapCallback.cs" />
     <Compile Include="MappingHandler.cs" />
+    <Compile Include="MapsToAttribute.cs" />
     <Compile Include="MapsFromAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
