--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ValidationAware.cs" />
     <Compile Include="ValidationException.cs" />
     <Compile Include="ValidationHandler.cs" />
+    <Compile Include="ValidationMapping.cs" />
     <Compile Include="ValidationOptions.cs" />
     <Compile Include="ValidationOutcome.cs" />
   </ItemGroup>
@@ -72,6 +73,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Miruken.Map\Miruken.Map.csproj">
+      <Project>{280f1b43-2b64-4a30-b332-62df809425fd}</Project>
+      <Name>Miruken.Map</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Miruken\Miruken.csproj">
       <Project>{82c1e9de-d611-47ce-a091-2bed66df5ac6}</Project>
       <Name>Miruken</Name>
