--- a/Source/Miruken.Validate/Miruken.Validate.nuspec
+++ b/Source/Miruken.Validate/Miruken.Validate.nuspec
@@ -15,7 +15,7 @@
     <copyright>Copyright 2016</copyright>
     <tags>Miruken Validate DataAnnotations FluentValidation</tags>
     <dependencies>
-      <dependency id="Miruken.Map" version="1.0"/>
+      <dependency id="Miruken" version="1.0"/>
       <dependency id="FluentValidation" version="6.4"/>
     </dependencies>
   </metadata>
