--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Callback\Policy\MethodPipeline.cs" />
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
-    <Compile Include="Callback\DefinitionAttribute.cs" />
+    <Compile Include="Callback\CategoryAttribute.cs" />
     <Compile Include="Callback\Policy\HandlerDescriptor.cs" />
     <Compile Include="Callback\Options.cs" />
     <Compile Include="Callback\CascadeHandler.cs" />
