--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Callback\ResolvingAttribute.cs" />
     <Compile Include="Callback\StringKey.cs" />
     <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
+    <Compile Include="Infrastructure\WeightedComparer.cs" />
     <Compile Include="Map\FormatAttribute.cs" />
     <Compile Include="Map\IFormatMatching.cs" />
     <Compile Include="Map\IMapping.cs" />
