--- a/Test/Miruken.Tests/Miruken.Tests.csproj
+++ b/Test/Miruken.Tests/Miruken.Tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Graph\TraversingTests.cs" />
     <Compile Include="Graph\TreeNode.cs" />
     <Compile Include="Infrastructure\PropertyChangeExtensionsTests.cs" />
+    <Compile Include="Infrastructure\TypedKeyedCollectionTests.cs" />
     <Compile Include="Map\MappingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeHelperTests.cs" />
