--- a/Source/Miruken.Security/Miruken.Security.nuspec
+++ b/Source/Miruken.Security/Miruken.Security.nuspec
@@ -1,22 +1,21 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Miruken.Validate</id>
+    <id>Miruken.Security</id>
     <version>$version$</version>
-    <title>Miruken Validate</title>
+    <title>Miruken Security</title>
     <authors>cneuwirt</authors>
     <owners>cneuwirt</owners>
     <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/Miruken-DotNet/Miruken</projectUrl>
     <iconUrl>https://avatars0.githubusercontent.com/u/20844317</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Miruken validation including DataAnnotations and FluentValidation</description>
+    <description>Miruken abstractions for security</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2016</copyright>
-    <tags>Miruken Validate DataAnnotations FluentValidation</tags>
+    <copyright>Copyright 2018</copyright>
+    <tags>Miruken Security</tags>
     <dependencies>
       <dependency id="Miruken" version="1.0"/>
-      <dependency id="FluentValidation" version="6.4"/>
     </dependencies>
   </metadata>
 </package>
