--- a/Test/Miruken.Security.Tests/Miruken.Security.Tests.csproj
+++ b/Test/Miruken.Security.Tests/Miruken.Security.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizeFilterTests.cs" />
     <Compile Include="HasClaimFilterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
