Generalized authorization better

--- a/Source/Miruken.Security/Miruken.Security.csproj
+++ b/Source/Miruken.Security/Miruken.Security.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorizedAttribute.cs" />
     <Compile Include="ClaimsAccessDecision.cs" />
     <Compile Include="HasClaimAttribute.cs" />
     <Compile Include="AuthorizeFilter.cs" />
