--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -67,6 +67,7 @@
     <Compile Include="IValidating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scopes.cs" />
+    <Compile Include="ValidateFilter.cs" />
     <Compile Include="ValidatesAttribute.cs" />
     <Compile Include="Validation.cs" />
     <Compile Include="ValidationAware.cs" />
