--- a/Test/Miruken.Validate.Tests/Miruken.Validate.Tests.csproj
+++ b/Test/Miruken.Validate.Tests/Miruken.Validate.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Model\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Team.cs" />
+    <Compile Include="ValidateFilterTests.cs" />
     <Compile Include="ValidationOutcomeTests.cs" />
     <Compile Include="ValidationTests.cs" />
   </ItemGroup>
