--- a/Source/Miruken.Castle/packages.config
+++ b/Source/Miruken.Castle/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
