--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Callback\Bundle.cs" />
     <Compile Include="Callback\ContainerAttribute.cs" />
     <Compile Include="Callback\DynamicFilter.cs" />
-    <Compile Include="Callback\GlobalFiltersAttribute.cs" />
+    <Compile Include="Callback\FilterInstancesProvider.cs" />
     <Compile Include="Callback\Handler.Batch.cs" />
     <Compile Include="Callback\Handler.Bundle.cs" />
     <Compile Include="Callback\Handler.Command.cs" />
