--- a/Test/Miruken.Security.Tests/Miruken.Security.Tests.csproj
+++ b/Test/Miruken.Security.Tests/Miruken.Security.Tests.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthorizedAttributeTests.cs" />
-    <Compile Include="HasClaimAtreibuteTests.cs" />
+    <Compile Include="AuthorizeFilterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
