--- a/Source/Miruken.Validate/Miruken.Validate.csproj
+++ b/Source/Miruken.Validate/Miruken.Validate.csproj
@@ -64,7 +64,6 @@
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="IScopeMatching.cs" />
     <Compile Include="IValidationAware.cs" />
-    <Compile Include="IValidating.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scopes.cs" />
     <Compile Include="ValidateAttribute.cs" />
@@ -73,7 +72,7 @@
     <Compile Include="Validation.cs" />
     <Compile Include="ValidationAware.cs" />
     <Compile Include="ValidationException.cs" />
-    <Compile Include="ValidationHandler.cs" />
+    <Compile Include="ValidationExtensions.cs" />
     <Compile Include="ValidationMapping.cs" />
     <Compile Include="ValidationOptions.cs" />
     <Compile Include="ValidationOutcome.cs" />
