Renamed Miruken.Security to Miruken.Secure

--- a/Source/Miruken.Secure/Miruken.Secure.nuspec
+++ b/Source/Miruken.Secure/Miruken.Secure.nuspec
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Miruken.Security</id>
+    <id>Miruken.Secure</id>
     <version>$version$</version>
-    <title>Miruken Security</title>
+    <title>Miruken Secure</title>
     <authors>cneuwirt</authors>
     <owners>cneuwirt</owners>
     <licenseUrl>https://github.com/Miruken-DotNet/Miruken/blob/master/LICENSE</licenseUrl>
