--- a/Source/Miruken.Secure/Miruken.Secure.csproj
+++ b/Source/Miruken.Secure/Miruken.Secure.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0633ABDD-552D-41DD-AD5C-00238482ABAA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Miruken.Security</RootNamespace>
+    <RootNamespace>Miruken.Secure</RootNamespace>
     <AssemblyName>Miruken.Security</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -53,13 +53,13 @@
     <Compile Include="AuthorizeFilter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Miruken.Security.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Miruken\Miruken.csproj">
       <Project>{82c1e9de-d611-47ce-a091-2bed66df5ac6}</Project>
       <Name>Miruken</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Miruken.Secure.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
