Fixed Miruken.Secure assembly

--- a/Source/Miruken.Secure/Miruken.Secure.csproj
+++ b/Source/Miruken.Secure/Miruken.Secure.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Miruken.Secure</RootNamespace>
-    <AssemblyName>Miruken.Security</AssemblyName>
+    <AssemblyName>Miruken.Secure</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
