Added ClaimsAttribute resolver

--- a/Source/Miruken.Secure/Miruken.Secure.csproj
+++ b/Source/Miruken.Secure/Miruken.Secure.csproj
@@ -41,6 +41,7 @@
     <Compile Include="AuthorizationOptions.cs" />
     <Compile Include="AuthorizeAttribute.cs" />
     <Compile Include="AuthorizeExtensions.cs" />
+    <Compile Include="ClaimAttribute.cs" />
     <Compile Include="PrincipalExtensions.cs" />
     <Compile Include="Properties\GlobalAssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
