--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Callback\Bundle.cs" />
     <Compile Include="Callback\ContainerAttribute.cs" />
     <Compile Include="Callback\DynamicFilter.cs" />
+    <Compile Include="Callback\FilteredObject.cs" />
     <Compile Include="Callback\FilterInstancesProvider.cs" />
     <Compile Include="Callback\Handler.Batch.cs" />
     <Compile Include="Callback\Handler.Bundle.cs" />
