--- a/Source/Miruken/Miruken.csproj
+++ b/Source/Miruken/Miruken.csproj
@@ -73,6 +73,8 @@
     <Compile Include="Callback\Policy\BivariantPolicy.cs" />
     <Compile Include="Callback\Policy\CallbackPolicyDescriptor.cs" />
     <Compile Include="Callback\Policy\GenericMapping.cs" />
+    <Compile Include="Callback\Policy\ConstructorDispatch.cs" />
+    <Compile Include="Callback\Policy\MemberDispatch.cs" />
     <Compile Include="Callback\Policy\RuleContext.cs" />
     <Compile Include="Callback\ProxyAttribute.cs" />
     <Compile Include="Callback\ResolvingAttribute.cs" />
@@ -81,6 +83,7 @@
     <Compile Include="Callback\Trampoline.cs" />
     <Compile Include="Callback\UnmanagedAttribute.cs" />
     <Compile Include="Infrastructure\ConcurrentDictionaryExtensions.cs" />
+    <Compile Include="Infrastructure\Delegates.cs" />
     <Compile Include="Infrastructure\TypeKeyedCollection.cs" />
     <Compile Include="Map\FormatAttribute.cs" />
     <Compile Include="Map\IFormatMatching.cs" />
@@ -100,8 +103,8 @@
     <Compile Include="Callback\IFilter.cs" />
     <Compile Include="Callback\Policy\HandleMethodBinding.cs" />
     <Compile Include="Callback\Policy\MethodDispatch.cs" />
-    <Compile Include="Callback\Policy\MethodBinding.cs" />
-    <Compile Include="Callback\Policy\PolicyMethodBinding.cs" />
+    <Compile Include="Callback\Policy\MemberBinding.cs" />
+    <Compile Include="Callback\Policy\PolicyMemberBinding.cs" />
     <Compile Include="Callback\Policy\MethodPipeline.cs" />
     <Compile Include="Callback\Policy\MethodRule.cs" />
     <Compile Include="Callback\Policy\CallbackPolicy.cs" />
